2014-09-08  Mihnea Ovidenie  <mihnea@adobe.com>

        [CSSRegions]Incorrect layout for multicol element transformed into region
        https://bugs.webkit.org/show_bug.cgi?id=136459

        Reviewed by David Hyatt.

        Until we will support the multicolumn region functionality, a multicolumn element
        that also has flow-from style is not transformed into a region (https://bugs.webkit.org/show_bug.cgi?id=135153).
        However, when a multicolumn element with flow-from style dynamically loses
        its multicolumn style while keeping the flow-from style, we have to transform
        the element into a region by detaching and attaching the associated DOM node,
        in the same way we are proceeding when an element receives a different flow-from style.

        Test: fast/regions/multicol/nested-multicol-into-region-dynamic.html

        * style/StyleResolveTree.cpp:
        (WebCore::Style::determineChange):

2014-09-08  Antti Koivisto  <antti@apple.com>

        Pass certificate info as part of ResourceResponse
        https://bugs.webkit.org/show_bug.cgi?id=136611

        Reviewed by Darin Adler.

        The current way of passing certificate info separately from ResourceResponse and then jamming it back
        is complex and confusing. This patch makes it a true part of the ResourceResponse.

        With this patch we also only create and pass the certificate info object for the main resource. It is
        a big and complex object and we never look into it for any other resource type.

        * WebCore.exp.in:
        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::ResourceResponseBase):

            Mark initialized for synthetic responses, unitialized for those backed by a platform request.

        (WebCore::ResourceResponseBase::initializeCertificateInfo):

            Calling this pulls the certificate info out from the platform type.